@@ -45,7 +45,7 @@
      <x>0</x>
      <y>0</y>
      <width>708</width>
-     <height>22</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -58,6 +58,7 @@
     <addaction name="action_SaveAs"/>
     <addaction name="separator"/>
     <addaction name="action_Close"/>
+    <addaction name="actionClose_Delete_the_File"/>
    </widget>
    <widget class="QMenu" name="menu_Edit">
     <property name="title">
@@ -290,6 +291,14 @@
    </property>
    <property name="text">
     <string>Start with AutoSave</string>
+   </property>
+  </action>
+  <action name="actionClose_Delete_the_File">
+   <property name="text">
+    <string>Close and Delete the File</string>
+   </property>
+   <property name="toolTip">
+    <string>Close Delete the File</string>
    </property>
   </action>
  </widget>
