@@ -1,3 +1,6 @@
+2022/09/03 ver1.0.14
+Added a feature 'Close and Delete the File'
+
 2021/02/23 ver1.0.13
 Remove the file when app is cloing if it is empty
 
